// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WelcomeScreen - Snapshot Tests > matches snapshot for standard user 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen bg-white dark:bg-slate-900 flex flex-col items-center justify-center p-8"
    role="main"
  >
    <div
      class="max-w-2xl w-full text-center"
    >
      <div
        class="flex justify-center mb-6"
      >
        <img
          alt="User avatar"
          class="w-16 h-16 rounded-full object-cover border-4 border-blue-100"
          src="https://example.com/avatar.jpg"
        />
      </div>
      <h1
        class="text-3xl font-bold text-slate-900 dark:text-white mb-2"
      >
        Welcome, John!
      </h1>
      <p
        class="text-lg text-slate-600 dark:text-slate-400 mb-4"
      >
        ACME EPC Contractors
      </p>
      <p
        class="text-sm text-slate-500 dark:text-slate-500 mb-8"
      >
        ceo@acme-epc.com
      </p>
      <div
        class="text-slate-600 dark:text-slate-300 mb-8 text-left"
      >
        <p
          class="mb-4"
        >
          ORION is your unified platform for connecting Primavera P6 schedules with SAP financials. In the next few steps, we'll help you:
        </p>
      </div>
      <h2
        class="sr-only"
      >
        What you can do with ORION
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8 text-left"
      >
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            📅
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              P6 Schedule Data
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              View projects, WBS, activities, and resources from Primavera P6
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            💰
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              SAP Financial Data
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Budget, actuals, commitments, and purchase orders from SAP
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            🔄
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              Real-time Sync
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Automatic synchronization keeps your data always up-to-date
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            📊
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              Unified Dashboard
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Cross-project visibility with KPIs and health indicators
            </p>
          </div>
        </div>
      </div>
      <button
        aria-busy="false"
        class="
            inline-flex items-center justify-center gap-2
            px-8 py-4 rounded-lg font-semibold text-lg
            transition-all duration-200
            bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-200
            text-white shadow-lg hover:shadow-xl
            focus:outline-none
          "
        type="button"
      >
        <span>
          Get Started
        </span>
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 7l5 5m0 0l-5 5m5-5H6"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <p
        class="mt-4 text-sm text-slate-500 dark:text-slate-500"
      >
        Setup takes about 5 minutes
      </p>
    </div>
  </main>
</div>
`;

exports[`WelcomeScreen - Snapshot Tests > matches snapshot for user without organization 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen bg-white dark:bg-slate-900 flex flex-col items-center justify-center p-8"
    role="main"
  >
    <div
      class="max-w-2xl w-full text-center"
    >
      <div
        class="flex justify-center mb-6"
      >
        <div
          aria-hidden="true"
          class="w-16 h-16 rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white text-xl font-semibold"
          data-testid="avatar-fallback"
        >
          J
        </div>
      </div>
      <h1
        class="text-3xl font-bold text-slate-900 dark:text-white mb-2"
      >
        Welcome, Jane!
      </h1>
      <p
        class="text-sm text-slate-500 dark:text-slate-500 mb-8"
      >
        solo@freelance.com
      </p>
      <div
        class="text-slate-600 dark:text-slate-300 mb-8 text-left"
      >
        <p
          class="mb-4"
        >
          ORION is your unified platform for connecting Primavera P6 schedules with SAP financials. In the next few steps, we'll help you:
        </p>
      </div>
      <h2
        class="sr-only"
      >
        What you can do with ORION
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8 text-left"
      >
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            📅
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              P6 Schedule Data
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              View projects, WBS, activities, and resources from Primavera P6
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            💰
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              SAP Financial Data
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Budget, actuals, commitments, and purchase orders from SAP
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            🔄
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              Real-time Sync
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Automatic synchronization keeps your data always up-to-date
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            📊
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              Unified Dashboard
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Cross-project visibility with KPIs and health indicators
            </p>
          </div>
        </div>
      </div>
      <button
        aria-busy="false"
        class="
            inline-flex items-center justify-center gap-2
            px-8 py-4 rounded-lg font-semibold text-lg
            transition-all duration-200
            bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-200
            text-white shadow-lg hover:shadow-xl
            focus:outline-none
          "
        type="button"
      >
        <span>
          Get Started
        </span>
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 7l5 5m0 0l-5 5m5-5H6"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <p
        class="mt-4 text-sm text-slate-500 dark:text-slate-500"
      >
        Setup takes about 5 minutes
      </p>
    </div>
  </main>
</div>
`;

exports[`WelcomeScreen - Snapshot Tests > matches snapshot in loading state 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen bg-white dark:bg-slate-900 flex flex-col items-center justify-center p-8"
    role="main"
  >
    <div
      class="max-w-2xl w-full text-center"
    >
      <div
        class="flex justify-center mb-6"
      >
        <img
          alt="User avatar"
          class="w-16 h-16 rounded-full object-cover border-4 border-blue-100"
          src="https://example.com/avatar.jpg"
        />
      </div>
      <h1
        class="text-3xl font-bold text-slate-900 dark:text-white mb-2"
      >
        Welcome, John!
      </h1>
      <p
        class="text-lg text-slate-600 dark:text-slate-400 mb-4"
      >
        ACME EPC Contractors
      </p>
      <p
        class="text-sm text-slate-500 dark:text-slate-500 mb-8"
      >
        ceo@acme-epc.com
      </p>
      <div
        class="text-slate-600 dark:text-slate-300 mb-8 text-left"
      >
        <p
          class="mb-4"
        >
          ORION is your unified platform for connecting Primavera P6 schedules with SAP financials. In the next few steps, we'll help you:
        </p>
      </div>
      <h2
        class="sr-only"
      >
        What you can do with ORION
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8 text-left"
      >
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            📅
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              P6 Schedule Data
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              View projects, WBS, activities, and resources from Primavera P6
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            💰
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              SAP Financial Data
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Budget, actuals, commitments, and purchase orders from SAP
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            🔄
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              Real-time Sync
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Automatic synchronization keeps your data always up-to-date
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-lg bg-slate-50 dark:bg-slate-800"
        >
          <span
            aria-hidden="true"
            class="text-2xl"
            role="img"
          >
            📊
          </span>
          <div>
            <p
              class="font-medium text-slate-900 dark:text-white"
            >
              Unified Dashboard
            </p>
            <p
              class="text-sm text-slate-600 dark:text-slate-400"
            >
              Cross-project visibility with KPIs and health indicators
            </p>
          </div>
        </div>
      </div>
      <button
        aria-busy="true"
        class="
            inline-flex items-center justify-center gap-2
            px-8 py-4 rounded-lg font-semibold text-lg
            transition-all duration-200
            bg-blue-400 cursor-not-allowed
            text-white shadow-lg hover:shadow-xl
            focus:outline-none
          "
        disabled=""
        type="button"
      >
        <div
          aria-hidden="true"
          class="animate-spin w-5 h-5 border-2 border-white border-t-transparent rounded-full"
          data-testid="loading-spinner"
        />
        <span>
          Get Started
        </span>
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 7l5 5m0 0l-5 5m5-5H6"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <p
        class="mt-4 text-sm text-slate-500 dark:text-slate-500"
      >
        Setup takes about 5 minutes
      </p>
    </div>
  </main>
</div>
`;
